dxtbx.log
*** Error compiling 'dxtbx/datablock.py'...
  File "dxtbx/datablock.py", line 322
    print 'Using %s for %s' % (self._format_class.__name__, filename)
                          ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatCBFMultiTile.py'...
  File "dxtbx/format/FormatCBFMultiTile.py", line 157
    print "hLL"
              ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "hLL")?

*** Error compiling 'dxtbx/format/FormatGatanDM4.py'...
  File "dxtbx/format/FormatGatanDM4.py", line 251
    print prefix + "DIR: {0}".format(name)
               ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatNexus.py'...
  File "dxtbx/format/FormatNexus.py", line 196
    print beam
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print beam)?

*** Error compiling 'dxtbx/format/FormatPYunspecified.py'...
  File "dxtbx/format/FormatPYunspecified.py", line 87
    print "This is not a file; assume the data are in the defined dictionary format"
                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "This is not a file; assume the data are in the defined dictionary format")?

*** Error compiling 'dxtbx/format/FormatSMVADSCSN928.py'...
  File "dxtbx/format/FormatSMVADSCSN928.py", line 67
    print FormatSMVADSCSN928.understand(arg)
                           ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatSMVTimePix_SU.py'...
  File "dxtbx/format/FormatSMVTimePix_SU.py", line 414
    print "FormatSMVTimePix_SU:", FormatSMVTimePix_SU.understand(arg)
                               ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatTIFFHelpers.py'...
  File "dxtbx/format/FormatTIFFHelpers.py", line 143
    print '(%d x %d) @ %d + %d' % (width, height, depth, header)
                              ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatXTC.py'...
  File "dxtbx/format/FormatXTC.py", line 68
    print 'This is an XTC file and can be read by PSANA'
                                                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print 'This is an XTC file and can be read by PSANA')?

*** Error compiling 'dxtbx/format/FormatXTCCspad.py'...
  File "dxtbx/format/FormatXTCCspad.py", line 149
    print 'No beam object initialized. Returning CSPAD detector without parallax corrections'
                                                                                            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print 'No beam object initialized. Returning CSPAD detector without parallax corrections')?

*** Error compiling 'dxtbx/format/nexus.py'...
  File "dxtbx/format/nexus.py", line 861
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "")?

*** Error compiling 'dxtbx/tests/command_line/tst_to_xds.py'...
  File "dxtbx/tests/command_line/tst_to_xds.py", line 16
    print "Skipping test: dials not present"
                                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Skipping test: dials not present")?

*** Error compiling 'dxtbx/tests/model/tst_parallax_correction.py'...
  File "dxtbx/tests/model/tst_parallax_correction.py", line 70
    print "Skipping test: dials not present"
                                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Skipping test: dials not present")?

*** Error compiling 'dxtbx/tests/model/tst_pixel_to_millimeter.py'...
  File "dxtbx/tests/model/tst_pixel_to_millimeter.py", line 174
    print "Skipping test: dials not present"
                                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Skipping test: dials not present")?

*** Error compiling 'dxtbx/tests/serialize/tst_crystal_model_serialize.py'...
  File "dxtbx/tests/serialize/tst_crystal_model_serialize.py", line 47
    print 'OK'
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int 'OK')?

*** Error compiling 'dxtbx/tests/serialize/tst_filename.py'...
  File "dxtbx/tests/serialize/tst_filename.py", line 23
    print 'OK'
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int 'OK')?

*** Error compiling 'dxtbx/tests/serialize/tst_xds.py'...
  File "dxtbx/tests/serialize/tst_xds.py", line 14
    print "Skipping test: dials not present"
                                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Skipping test: dials not present")?

*** Error compiling 'dxtbx/tests/test_scan.py'...
  File "dxtbx/tests/test_scan.py", line 70
    print sum(xscans[1:], xscans[0])
            ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/tests/tstFormatCBFFull.py'...
  File "dxtbx/tests/tstFormatCBFFull.py", line 9
    print "Skipping tstFormatCBFFull.py: dials not present"
                                                          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Skipping tstFormatCBFFull.py: dials not present")?

*** Error compiling 'dxtbx/tests/tst_dials_226.py'...
  File "dxtbx/tests/tst_dials_226.py", line 11
    print "Skipping tst_dials_226.py: dials_regression not present"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Skipping tst_dials_226.py: dials_regression not present")?

*** Error compiling 'dxtbx/tests/tst_dxtbx.py'...
  File "dxtbx/tests/tst_dxtbx.py", line 6
    print "Skipping test: dials not present"
                                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Skipping test: dials not present")?

*** Error compiling 'dxtbx/tests/tst_filecache.py'...
  File "dxtbx/tests/tst_filecache.py", line 89
    print "Running test for parameters %d %d" % (random_a, random_b)
                                            ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/tests/tst_image_readers.py'...
  File "dxtbx/tests/tst_image_readers.py", line 9
    print 'SKIP: dials_regression not configured'
                                                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int 'SKIP: dials_regression not configured')?

*** Error compiling 'dxtbx/tests/tst_imageset.py'...
  File "dxtbx/tests/tst_imageset.py", line 91
    print image
              ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print image)?

